--- a/ScriptableObjectModel/ScriptableObjectModel/ScriptableObjectModel.csproj
+++ b/ScriptableObjectModel/ScriptableObjectModel/ScriptableObjectModel.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{34FEA540-B6EB-493F-A391-D413A964B5D4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScriptableExample1</RootNamespace>
+    <RootNamespace>ScriptableObjectModel</RootNamespace>
     <AssemblyName>ScriptableExample1</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -68,6 +68,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
