--- a/wwxwrxtest/WebRole1/WebRole1.csproj
+++ b/wwxwrxtest/WebRole1/WebRole1.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="WebRole.cs" />
   </ItemGroup>
   <PropertyGroup>
