--- a/wwxwrxtest/WebRole1/Web.config
+++ b/wwxwrxtest/WebRole1/Web.config
@@ -17,5 +17,6 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="Off"/>
   </system.web>
 </configuration>
