Force wwxwrxtest WebRole to run in a 32 bit process.

--- a/wwxwrxtest/WebRole1/WebRole1.csproj
+++ b/wwxwrxtest/WebRole1/WebRole1.csproj
@@ -105,6 +105,9 @@
     </Content>
     <Content Include="packages.config" />
     <Content Include="MessengerService.svc" />
+    <Content Include="ConfigureIIS.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
