--- a/ww-ws-objmod/ww-ws-objmod/ww-ws-objmod.csproj
+++ b/ww-ws-objmod/ww-ws-objmod/ww-ws-objmod.csproj
@@ -61,6 +61,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Macros\AClass.bas" />
+    <Content Include="App_Data\Macros\Globals.bas" />
+    <Content Include="App_Data\Macros\Macro1.bas" />
     <Content Include="Content\images\ajax-loader.gif" />
     <Content Include="Content\images\ajax-loader.png" />
     <Content Include="Content\images\icons-18-black.png" />
@@ -282,7 +285,6 @@
     <Content Include="Content\jquery.mobile.theme-1.4.2.min.css" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\ww-ws-objmod %282%29.pubxml" />
-    <None Include="Properties\PublishProfiles\ww-ws-objmod.pubxml" />
     <Content Include="Scripts\jquery.mobile-1.4.2.js" />
     <Content Include="Scripts\jquery.mobile-1.4.2.min.js" />
     <Content Include="Scripts\jquery.mobile-1.4.2.min.map" />
@@ -313,6 +315,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AClass.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -320,7 +323,10 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="IAppModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scriptable.cs" />
+    <Compile Include="ScriptingLanguage.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup />
