--- a/ww-ws-objmod/ww-ws-objmod/ww-ws-objmod.csproj
+++ b/ww-ws-objmod/ww-ws-objmod/ww-ws-objmod.csproj
@@ -315,7 +315,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AClass.cs" />
+    <Compile Include="ClientImage.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
