Macro2 splits classes out as '#Uses "Triangle.vb".

--- a/ww-classobjs/ww-classobjs/ww-classobjs.csproj
+++ b/ww-classobjs/ww-classobjs/ww-classobjs.csproj
@@ -82,6 +82,8 @@
     <Content Include="..\..\..\Working-business\config\ww-classobjs-strings.txt">
       <Link>App_Data\WinWrapBasic10\ww-classobjs-strings.txt</Link>
     </Content>
+    <Content Include="App_Data\Macros\Triangle.vb" />
+    <Content Include="App_Data\Macros\Macro2.bas" />
     <Content Include="App_Data\Macros\Macro1.bas" />
     <Content Include="Default.aspx" />
     <Content Include="Web.config" />
