--- a/ww-classobjs/ww-classobjs/ww-classobjs.csproj
+++ b/ww-classobjs/ww-classobjs/ww-classobjs.csproj
@@ -98,6 +98,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="VirtualFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AppModel\AppModel.csproj">
