Sharing Trangles.vb.

--- a/ww-classobjs/VBdotNet/VBdotNet.vbproj
+++ b/ww-classobjs/VBdotNet/VBdotNet.vbproj
@@ -64,7 +64,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Triangle.vb" />
+    <Compile Include="..\ww-classobjs\App_Data\Macros\Triangle.vb">
+      <Link>Triangle.vb</Link>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
