--- a/ww-classobjs/VBdotNet/VBdotNet.vbproj
+++ b/ww-classobjs/VBdotNet/VBdotNet.vbproj
@@ -103,9 +103,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AppModel\AppModel.csproj">
+    <ProjectReference Include="..\AppModel\ScriptingModel.csproj">
       <Project>{927d62db-76e3-4ae1-ae0f-c1c42a2b67b4}</Project>
-      <Name>AppModel</Name>
+      <Name>ScriptingModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
