--- a/ww-classobjs/ww-classobjs/ww-classobjs.csproj
+++ b/ww-classobjs/ww-classobjs/ww-classobjs.csproj
@@ -101,9 +101,9 @@
     <Compile Include="VirtualFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AppModel\AppModel.csproj">
+    <ProjectReference Include="..\AppModel\ScriptingModel.csproj">
       <Project>{927d62db-76e3-4ae1-ae0f-c1c42a2b67b4}</Project>
-      <Name>AppModel</Name>
+      <Name>ScriptingModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\VBdotNet\VBdotNet.vbproj">
       <Project>{fa585ca1-d254-46b5-8951-699d699f9732}</Project>
