--- a/ww-classobjs/ww-classobjs/ww-classobjs.csproj
+++ b/ww-classobjs/ww-classobjs/ww-classobjs.csproj
@@ -101,7 +101,7 @@
     <Compile Include="VirtualFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AppModel\ScriptingModel.csproj">
+    <ProjectReference Include="..\ScriptingModel\ScriptingModel.csproj">
       <Project>{927d62db-76e3-4ae1-ae0f-c1c42a2b67b4}</Project>
       <Name>ScriptingModel</Name>
     </ProjectReference>
