--- a/wwhowto01/VBdotNet/VBdotNet.vbproj
+++ b/wwhowto01/VBdotNet/VBdotNet.vbproj
@@ -64,7 +64,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\ww-classobjs\App_Data\Macros\Triangle.vb">
+    <Compile Include="..\wwhowto01\App_Data\Macros\Triangle.vb">
       <Link>Triangle.vb</Link>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
