--- a/wwhowto01/wwhowto01/wwhowto01.csproj
+++ b/wwhowto01/wwhowto01/wwhowto01.csproj
@@ -110,6 +110,7 @@
       <Name>VBdotNet</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
